--- a/app/src/main/res/layout/questions_boolean_items.xml
+++ b/app/src/main/res/layout/questions_boolean_items.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="questionsForBoolean"
-            type="kg.nurzhamal.quizapp.data.Questions_boolean" />
+            type="kg.kurmanjan.quizapp.data.Questions_boolean" />
 
     </data>
 
