--- a/app/src/main/res/layout/questions_multi_item.xml
+++ b/app/src/main/res/layout/questions_multi_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="questions"
-            type="kg.nurzhamal.quizapp.data.Questions_multi" />
+            type="kg.kurmanjan.quizapp.data.Questions_multi" />
 
     </data>
 
