--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-<kg.nurzhamal.quizapp.MyViewPager
+<kg.kurmanjan.quizapp.MyViewPager
     android:id="@+id/main_pager"
     android:layout_width="match_parent"
     android:layout_height="0dp"
